trying to fix mobile cutoff

--- a/styles.css
+++ b/styles.css
@@ -545,6 +545,7 @@ html, body { /*done*/
     .middleBar {
         margin: 0;
         padding: 0;
+        margin-bottom: 75px;
         border-radius: 0;
         height: calc(100vh - 75px); 
     }
